--- a/EDA_HOTEL_BOOKING.ipynb
+++ b/EDA_HOTEL_BOOKING.ipynb
@@ -6,12 +6,6 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [
-        "nA9Y7ga8ng1Z",
-        "PBTbrJXOngz2",
-        "u3PMJOP6ngxN",
-        "dauF4eBmngu3",
-        "bKJF3rekwFvQ",
-        "MSa1f5Uengrz",
         "GF8Ens_Soomf",
         "0wOQAZs5pc--",
         "K5QZ13OEpz2H",
@@ -414,6 +408,19 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# Dropping duplicate values\n",
+        "hotel_df.drop_duplicates(inplace = True)\n",
+        "hotel_df.shape"
+      ],
+      "metadata": {
+        "id": "TcwHdS_CWib0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "#### Missing Values/Null Values"
@@ -426,7 +433,7 @@
       "cell_type": "code",
       "source": [
         "# Missing Values/Null Values Count\n",
-        "hotel_df.isna().sum()"
+        "hotel_df.isna().sum().sort_values(ascending=False)[:6].reset_index()"
       ],
       "metadata": {
         "id": "GgHWkxvamxVg"
@@ -438,18 +445,11 @@
       "cell_type": "code",
       "source": [
         "# Visualizing the missing values\n",
-        "missing_percentages = hotel_df.isnull().mean() * 100\n",
         "\n",
-        "# Sorting columns by the percentage of missing values in descending order\n",
-        "missing_percentages = missing_percentages.sort_values(ascending=False)\n",
-        "\n",
-        "# Bar plot to visualize missing values\n",
-        "plt.figure(figsize=(10, 6))\n",
-        "sns.barplot(x=missing_percentages.index, y=missing_percentages)\n",
-        "plt.xticks(rotation=90)\n",
-        "plt.ylabel('Percentage of Missing Values')\n",
-        "plt.xlabel('Columns')\n",
-        "plt.title('Missing Values in Hotel Booking Dataset')\n",
+        "# Create a heatmap to visualize missing values\n",
+        "plt.figure(figsize=(12, 8))\n",
+        "sns.heatmap(hotel_df.isnull(), cmap='viridis', cbar=False)\n",
+        "plt.title('Missing Values Heatmap', fontsize=16)\n",
         "plt.show()"
       ],
       "metadata": {
@@ -488,7 +488,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Columns"
+        "# Dataset Columns\n",
+        "hotel_df.columns"
       ],
       "metadata": {
         "id": "j7xfkqrt5Ag5"
@@ -499,7 +500,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Describe"
+        "# Dataset Describe\n",
+        "hotel_df.describe()"
       ],
       "metadata": {
         "id": "DnOaZdaE5Q5t"
@@ -519,7 +521,66 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "**Hotel**:Types of hotel(Resort Hotel,City Hotel)\n",
+        "\n",
+        "**is_cancelled**:(True=1, False=0)\n",
+        "\n",
+        "**lead_time**:Number of days that elapsed between the entering date of the booking into the PMS and the arrival date\n",
+        "\n",
+        "**arrival_date_year**:Year of arrival\n",
+        "\n",
+        "**arrival_date_month**:Month of arrival\n",
+        "\n",
+        "**arrival_date_week_number**:week number of the arrival date\n",
+        "\n",
+        "**arrival_date_day**:Day of arrival date\n",
+        "\n",
+        "**stays_in_weekend_nights**:Number of weekend nights(saturday or sunday) the guest stayed or booked to stay at the hotel\n",
+        "\n",
+        "**stays_in_week_nights**::Number of week nights(monday to friday) the guest\n",
+        "                        stayed or booked to stay at the hotel\n",
+        "\n",
+        "**adults**:Number of adults\n",
+        "\n",
+        "**children**:Number of children\n",
+        "\n",
+        "**babies**:Number of babies\n",
+        "\n",
+        "**meal**:Kind of meal opted for\n",
+        "\n",
+        "**country**:Country code\n",
+        "\n",
+        "**market_segment**:Which segment the customer belongs to\n",
+        "\n",
+        "**Distribution_channel**:How the customer accessed the stay-corporate booking/  direct/TA.TO\n",
+        "\n",
+        "**is_repeated_guest**:Guest coming for first time or not\n",
+        "\n",
+        "**previous_cancellation**:Was there a cancellation before\n",
+        "\n",
+        "**previous_bookings**:Count of previous bookings\n",
+        "\n",
+        "**reserved_room_type**:Type of room reserved\n",
+        "\n",
+        "**assigned_room_type**:Type of room assigned\n",
+        "\n",
+        "**booking_changes**:Count of changes made to booking\n",
+        "\n",
+        "**deposit_type**:Deposit type\n",
+        "\n",
+        "**agent**:Booked through agent\n",
+        "\n",
+        "**days_in_waiting_list**:Number of days in waiting list\n",
+        "\n",
+        "**customer_type**:Type of customer\n",
+        "\n",
+        "**required_car_parking**:If car parking is required\n",
+        "\n",
+        "**total_of_special_req**:Number of additional special requirements\n",
+        "\n",
+        "**reservation_status**:Reservation status\n",
+        "\n",
+        "**reservation_status_date**:Date of specific status"
       ],
       "metadata": {
         "id": "aJV4KIxSnxay"
@@ -537,10 +598,154 @@
     {
       "cell_type": "code",
       "source": [
-        "# Check Unique Values for each variable."
+        "# Check Unique Values for each variable.\n",
+        "hotel_df['hotel'].unique()"
       ],
       "metadata": {
         "id": "zms12Yq5n-jE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "hotel_df['is_canceled'].unique()"
+      ],
+      "metadata": {
+        "id": "HjXzEPkSonjv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "hotel_df['arrival_date_year'].unique()"
+      ],
+      "metadata": {
+        "id": "ekmJldjioq-m"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "hotel_df['meal'].unique()"
+      ],
+      "metadata": {
+        "id": "onxI7Wx_otfA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "hotel_df['market_segment'].unique()"
+      ],
+      "metadata": {
+        "id": "dpZ2I-cYpy45"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "hotel_df['distribution_channel'].unique()"
+      ],
+      "metadata": {
+        "id": "vqi0gD-Up1nE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "hotel_df['children'].unique()"
+      ],
+      "metadata": {
+        "id": "TvzU4K6yp4Ig"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "hotel_df['distribution_channel'].unique()"
+      ],
+      "metadata": {
+        "id": "uHJVu1FDp6Tg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "hotel_df['is_repeated_guest'].unique()"
+      ],
+      "metadata": {
+        "id": "6te1jYbfp8f2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "hotel_df['reserved_room_type'].unique()"
+      ],
+      "metadata": {
+        "id": "Q4HHr6_Dp-8b"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "hotel_df['deposit_type'].unique()"
+      ],
+      "metadata": {
+        "id": "dzm5HLirqA_6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "hotel_df['reservation_status'].unique()"
+      ],
+      "metadata": {
+        "id": "tydpt5-FqC2L"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "hotel_df['customer_type'].unique()"
+      ],
+      "metadata": {
+        "id": "d8SD5HJcqE-F"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "hotel_df['agent'].unique()"
+      ],
+      "metadata": {
+        "id": "SkjrNAFCqG6T"
       },
       "execution_count": null,
       "outputs": []
@@ -566,10 +771,263 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code to make your dataset analysis ready."
+        "# Write your code to make your dataset analysis ready.\n",
+        "# FIRST OF ALL WE WILL CREATE A COPY OF THE ORIGINAL DATAFRAME TO PERFORM THE ANALYSIS\n",
+        "# Creating a copy of dataframe\n",
+        "\n",
+        "df = hotel_df.copy()"
       ],
       "metadata": {
         "id": "wk-9a2fpoLcV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Cleaning data**\n",
+        "\n",
+        "Cleaning data is crucial step before EDA as it will remove the ambigous data that can affect the outcome of EDA."
+      ],
+      "metadata": {
+        "id": "nTX2Vr8QqlYi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Step1: Handling missing values.**"
+      ],
+      "metadata": {
+        "id": "uJxIwO-urNb5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Since the company column has more than 80 percent null value."
+      ],
+      "metadata": {
+        "id": "GoJqJb_8eE4h"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Dropping the company columns\n",
+        "df=df.drop(\"company\",axis=1)"
+      ],
+      "metadata": {
+        "id": "BmGD3Wh2eF-r"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Since,  agent column have agent numbers as data. There may be some cases when customer didnt booked hotel via any agent. So in that case values can be null under these column. We will replace null values by 0 in these columns"
+      ],
+      "metadata": {
+        "id": "t6OMqEtGrUE1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['agent'] = df['agent'].fillna(0)"
+      ],
+      "metadata": {
+        "id": "WFjUKE5CrYFR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This column 'children' has 0 as value which means 0 children were present in group of customers who made that transaction. So, 'nan' values are the missing values due to error of recording data.\n",
+        "\n",
+        "We will replace the null values under this column with mean value of children."
+      ],
+      "metadata": {
+        "id": "S8SDXOabrgfa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['children'].fillna(df['children'].mean(), inplace = True)"
+      ],
+      "metadata": {
+        "id": "vlmCa5pPrmRQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Next column with missing value is 'country'. This column represents the country of oriigin of customer. Since, this column has datatype of string. We will replace the missing value with 'others'"
+      ],
+      "metadata": {
+        "id": "fJXGMZKNrqCW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['country'].fillna('others', inplace = True)"
+      ],
+      "metadata": {
+        "id": "W10gpNPXruma"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "There are some rows with total number of adults, children or babies equal to zero. So we will remove such rows."
+      ],
+      "metadata": {
+        "id": "A-MvBHO_ryJn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df[df['adults']+df['babies']+df['children'] == 0].shape"
+      ],
+      "metadata": {
+        "id": "AgwZWvR_r3GL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.drop(df[df['adults']+df['babies']+df['children'] == 0].index, inplace = True)"
+      ],
+      "metadata": {
+        "id": "esNP_EHur2gb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Step 2: Converting columns to appropriate datatypes.**"
+      ],
+      "metadata": {
+        "id": "DhhIBe0qsIqn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df[['children', 'agent']] = df[['children', 'agent']].astype('int64')\n",
+        "\n",
+        "# Convert 'reservation_status_date' column to datetime format\n",
+        "df['reservation_status_date'] = pd.to_datetime(df['reservation_status_date'])"
+      ],
+      "metadata": {
+        "id": "0PTT7aEQsw1d"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Step 3: Adding important columns.**"
+      ],
+      "metadata": {
+        "id": "6cjUGZ9KsvUf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Adding total staying days in hotels\n",
+        "df['total_stay'] = df['stays_in_weekend_nights']+df['stays_in_week_nights']\n",
+        "\n",
+        "# Adding total people num as column, i.e. total people num = num of adults + children + babies\n",
+        "df['total_people'] = df['adults']+df['children']+df['babies']"
+      ],
+      "metadata": {
+        "id": "68Z5Jf5Ps7Oc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Analysis**"
+      ],
+      "metadata": {
+        "id": "OHs9B4bjtC5W"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Count the number of bookings for each hotel type\n",
+        "hotel_type_bookings = df['hotel'].value_counts()\n",
+        "\n",
+        "# Calculate the average lead time for bookings\n",
+        "avg_lead_time = df['lead_time'].mean()\n",
+        "\n",
+        "# Calculate the average length of stay for bookings\n",
+        "avg_length_of_stay = df['total_stay'].mean()\n",
+        "\n",
+        "# Calculate the average number of booking changes\n",
+        "average_booking_changes = df['booking_changes'].mean()\n",
+        "\n",
+        "# Calculate the average daily rate (ADR)\n",
+        "average_adr = df['adr'].mean()\n",
+        "\n",
+        "# Print the results\n",
+        "print(\"Each hotel type booking-\",hotel_type_bookings)\n",
+        "print(\"Average lead time for bookings:\", avg_lead_time)\n",
+        "print(\"Average length of stay for bookings:\", avg_length_of_stay)\n",
+        "print(\"Average number of booking changes:\", average_booking_changes)\n",
+        "print(\"Average Daily Rate (ADR):\", average_adr)\n"
+      ],
+      "metadata": {
+        "id": "7xNpHr84tJDT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To find the yearly bookings and cancellations"
+      ],
+      "metadata": {
+        "id": "NR-8YdS0tPNy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calculate the total number of bookings\n",
+        "total_bookings_per_year = df.groupby('arrival_date_year')['hotel'].count()\n",
+        "print(\"Total bookings per year-\",total_bookings_per_year)\n",
+        "\n",
+        "# Calculate the total number of cancellations\n",
+        "canceled_bookings_df = df[df['is_canceled'] == 1]\n",
+        "total_cancellations_per_year = canceled_bookings_df.groupby('arrival_date_year')['hotel'].count()\n",
+        "print(\"Total cancellations per year-\",total_cancellations_per_year)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "WgXwZbEYtS-g"
       },
       "execution_count": null,
       "outputs": []
@@ -586,10 +1044,78 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "# **Manipulations**"
       ],
       "metadata": {
         "id": "LbyXE7I1olp8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "All the duplicate rows have been removed.\n",
+        "\n",
+        "The null values of agent columns have been replaced by \"0\",and the company columns have been droped due to large nmber of null values.The null values of children columns have been replaced by mean of the column\n",
+        "\n",
+        "There are some rows with total number of adults, children or babies equal to zero. So such rows have been removed.\n",
+        "\n",
+        "The arrival_date_year column has been converted to datetime format to enable further analysis based on the year of arrival,and also the children an agent columns have been converted to int\n",
+        "\n",
+        "New columns of total_stay and total_people has been added.\n"
+      ],
+      "metadata": {
+        "id": "pVJIGpPMcPUQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Insights**"
+      ],
+      "metadata": {
+        "id": "8Ip8twyRhcib"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Unique values of each columns have been identified.\n",
+        "\n",
+        "\n",
+        "Each hotel type booking-\n",
+        "\n",
+        "City Hotel  -    53274\n",
+        "\n",
+        "Resort Hotel  -  33956\n",
+        "\n",
+        "\n",
+        "\n",
+        "Average lead time for bookings: 79.97101914478964\n",
+        "\n",
+        "Average length of stay for bookings: 3.6285337613206465\n",
+        "\n",
+        "Average number of booking changes: 0.268497076693798\n",
+        "\n",
+        "Average Daily Rate (ADR): 106.51803072337499\n",
+        "\n",
+        "Total bookings per year-\n",
+        "\n",
+        "2015  -  13284\n",
+        "\n",
+        "2016  -  42313\n",
+        "\n",
+        "2017   -   31633\n",
+        "\n",
+        "Total cancellations per year-\n",
+        "\n",
+        "2015  -   2703\n",
+        "\n",
+        "2016  -  11200\n",
+        "\n",
+        "2017  -  10106"
+      ],
+      "metadata": {
+        "id": "ag2ShvZKheeU"
       }
     },
     {
